# 12

./: .gitignore  CLAUDE.md  CONVERSATION.md  CUBES_GUIDE_HE.md  FULL_CONVERSATION.md  PLAN.md  PROJECT.md  SQL_OPTIMIZATION_REPORT.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_workflows.py
backend/app/: config.py  database.py  main.py  version.py
backend/app/agents/: __init__.py  client.py  context.py  cube_expert.py  dispatcher.py  registry.py  router.py  schemas.py  sessions.py  skills_loader.py  validation.py
backend/app/cubes/: add_numbers.py  alison_flights.py  all_flights.py  area_spatial_filter.py  (+17 more)
backend/tests/: conftest.py  test_add_numbers.py  test_agent_infra.py  test_alison_flights.py  test_all_flights.py  test_area_spatial_filter.py  test_canvas_agent.py  test_count_by_field.py  test_cube_expert.py  test_dark_flight_detector.py  test_echo_cube.py  test_executor.py  test_filter_flights.py  test_geo_country_loader.py  test_geo_fir_loader.py  test_geo_land_water_loader.py  test_geo_temporal_playback.py  test_get_anomalies.py  test_get_flight_course.py  test_get_learned_paths.py  test_historical_query.py  test_icao24_lookup.py  test_integration_pipelines.py  test_network_graph_builder.py  test_registration_country_filter.py  test_set_operations.py  test_signal_health_analyzer.py  test_signal_kalman.py  test_signal_rule_based.py  test_squawk_filter.py  test_sse_stream.py  test_stream_graph.py  test_temporal_heatmap.py  test_time_utils.py  test_validation.py
(+367 files in other folders)
